--- a/src/assets/components/Slider.css
+++ b/src/assets/components/Slider.css
@@ -97,7 +97,7 @@
 .slide__subtitle {
 	font-size: 20px;
 	font-weight: 700;
-	color: var(--color--lightblue);
+	color: var(--color--x);
 	margin-top: 20px;
 	font-style: italic;
 }
