--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 #root {
-	--color--blue: #2d94d8;
-	--color--lightblue: rgb(0, 166, 255);
+	--color--darkx: rgb(4, 110, 96);
+	--color--x: rgb(0, 148, 121);
 	--color--grey: #95a5a6;
-	--color--darkgrey: #2c3e50;
-	--color--darkergrey: #1a252f;
+	--color--darkgrey: #1f3449;
+	--color--darkergrey: #15232f;
 	--color--whitish: #ebebeb;
 
 	--project--std: 0.3s; /* short-transition-duration */
 	--project--mtd: 0.8s; /* medium-transition-duration */
-	--project--bs: 0px 0px 26px 0px #e2e2e2;
+	--project--bs: 0px 0px 16px 0px rgba(255, 255, 255, 0.4);
 	--project--br: 20px;
 	--project--border: 2px solid var(--color--whitish);
 
