--- a/src/assets/components/Intro.css
+++ b/src/assets/components/Intro.css
@@ -21,7 +21,7 @@
 	justify-content: center;
 	align-items: flex-start;
 	flex-direction: column;
-	gap: 60px;
+	gap: var(--intro--gap);
 	padding: 0 10vw 0 5vw;
 }
 
@@ -30,7 +30,7 @@
 }
 
 .intro__title {
-	font-size: 60px;
+	font-size: var(--intro-title--fs);
 	line-height: 1.2;
 	font-weight: 700;
 
@@ -38,7 +38,7 @@
 }
 
 .intro__subtitle {
-	font-size: 30px;
+	font-size: var(--intro-subtitle--fs);
 	font-weight: 500;
 	line-height: 1.4;
 
@@ -48,7 +48,7 @@
 .intro__slogan {
 	margin-top: 20px;
 	text-align: right;
-	font-size: 20px;
+	font-size: var(--intro-slogan--fs);
 	font-weight: 700;
 	color: var(--color--x);
 	font-style: italic;
@@ -79,7 +79,7 @@
 }
 
 .intro__button {
-	font-size: 30px;
+	font-size: var(--intro-button--fs);
 	cursor: pointer;
 	background-color: var(--color--darkx);
 	border: var(--project--border);
