--- a/src/App.css
+++ b/src/App.css
@@ -74,9 +74,7 @@
 		--mini-slider--right: 30px;
 	}
 
-	@media (max-width: 850px),
-	(max-width: 1200px) and (max-height: 660px),
-	(max-height: 500px) {
+	@media (max-width: 1200px),	(max-height: 600px) {
 		--window-support--display: flex;
 	}
 }
